# epiphyllum

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  build.rs  grub.cfg  linker.ld  resolve_addrs.sh  runner.py  x86_64-epiphyllum.json
.cargo/: config  config.toml
bootloader/: Cargo.toml  build.rs  linker.ld  x86_64-bootloader.json
bootloader/.cargo/: config
bootloader/src/: elf.rs  exception_handler.rs  main.rs  multiboot.rs  paging.rs  print.rs
bootloader/src/asm/: long_mode.S  protected_mode.S
bootloader/src/devices/: serial.rs  vga.rs
epiphyllum-structures/: Cargo.toml
epiphyllum-structures/src/: lib.rs  rb_tree.rs  vyukov_queue.rs
kernel/: Cargo.toml  Xargo.toml  build.rs  linker.ld  x86_64-epiphyllum.json
kernel/.cargo/: config  config.toml
kernel/kernel_test_macro/: Cargo.toml
kernel/kernel_test_macro/src/: lib.rs
kernel/src/: acpica.rs  asm.rs  avl_tree.rs  devices.rs  exception_handler.rs  gdt.rs  interrupts.rs  lib.rs  lock.rs  main.rs  malloc.rs  multiboot.rs  paging.rs  print.rs  rng.rs  stack_trace.rs  structures.rs  task.rs  test.rs  test_runner.rs  timer.rs
kernel/src/acpica/: binding_utils.rs  device.rs  madt.rs  mcfg.rs  os_services.rs  resource.rs  wrapper.h
kernel/src/acpica/acpi/: utclib.c
kernel/src/acpica/include/platform/: acenv.h  acenvex.h  acepiphyllum.h
kernel/src/asm/: context_switch.S  cpuid.rs  interrupt_entry.S
kernel/src/devices/: pci.rs  pic.rs  pit.rs  serial.rs  timer.rs  vga.rs
kernel/src/devices/pci/: acpi.rs  address.rs  config_space.rs  device.rs  enhanced_cam.rs  enumeration.rs  host_bridge.rs  interrupts.rs  legacy_cam.rs
kernel/src/interrupts/: exceptions.rs  handler.rs  idt.rs
kernel/src/malloc/: large_zone_alloc.rs  physical.rs  physical_mem.rs  small_zone_alloc.rs  virtual_mem.rs
kernel/src/paging/: address_space.rs  direct.rs  entry.rs  index.rs  new_table.rs  structs.rs  table.rs  tables.rs
kernel/src/structures/: avl_tree.rs  bip_buffer.rs  bitmask.rs  handle_list.rs  mpsc_channel.rs  node_arena.rs  ring_buffer.rs  vyukov_queue.rs
kernel/src/task/: async_task.rs  scheduler.rs  scheduling.rs  structs.rs  wait_queue.rs
kernel/src/timer/: extension.rs  wheel.rs
src/: devices.rs  main.rs  print.rs  serial.rs  test_runner.rs  vga.rs
src/boot/: long_mode.S  protected_mode.S
