cargo-features = ["per-package-target"]

[package]
name = "epiphyllum-bootloader"
version = "0.1.0"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2021"
forced-target = "./x86_64-bootloader.json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
spin = "*"
x86_64 = "^0.14"
cstr_core = {version = "^0.1", default-features = false}
memchr = { version = "2.4.1", default-features = false }

[dependencies.lazy_static]
version = "^1.4"
features = ["spin_no_std"]
