[package]
name = "epiphyllum-structures"
version = "0.1.0"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck = {version = "^1", default-features=false, features=["use_logging"]}
quickcheck_macros = "1"
