[package]
name = "epiphyllum"
version = "0.1.0"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "epiphyllum"
path = "src/main.rs"

#[package.metadata.bootimage]
#test-args = [
#    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
#    "-serial", "stdio",
#    "-display", "none"
#]
#test-success-exit-code = 33

[build-dependencies]
cc = "1.0"
bindgen = "^0.53"

[dependencies]
spin = "*"
x86_64 = "^0.9"
cstr_core = "^0.1"
cty = "^0.2"

[target.x86_64-epiphyllum.dependencies]
compiler_builtins = { version="*", features = ["mem"] }

[dependencies.num_enum]
version = "^0.4"
default-features = false
features = []

[dependencies.lazy_static]
version = "^1.0"
features = ["spin_no_std"]

[dependencies.crossbeam]
version = "0.7"
default-features = false
features = ["alloc", "nightly"]
