[package]
name = "epiphyllum"
version = "0.1.0"
authors = ["Sebastian Mobo <stmobo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "epiphyllum"
path = "src/main.rs"

#[package.metadata.bootimage]
#test-args = [
#    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
#    "-serial", "stdio",
#    "-display", "none"
#]
#test-success-exit-code = 33

[build-dependencies]
cc = "1.0"
bindgen = {version="^0.53", default-features=false, features=["clap", "runtime", "which-rustfmt"]}
#regex = {version="=1.3.7", default-features=false, features=["std", "unicode"]}

[dependencies]
spin = {version="^0.7", default-features=false, features=["lock_api"]}
x86_64 = "^0.13"
cty = "^0.2"
kernel_test_macro = { path = "./kernel_test_macro" }
hashbrown = "0.9"
cstr_core = "^0.1"
memchr = { version = "=2.1", default-features = false }
epiphyllum-structures = { path = "../epiphyllum-structures" }

[dependencies.num_enum]
version = "^0.5"
default-features = false
features = []

[dependencies.lazy_static]
version = "^1.4"
features = ["spin_no_std"]

[dependencies.crossbeam]
version = "0.8"
default-features = false
features = ["alloc", "nightly"]
